syntax = "proto3";

package order;
option go_package="order;order";

message GetItemsByVendorCodeRequest {
    string vendor_code = 1;
}

message Items {
    repeated Item items = 1;
}

message Item {
    string category = 1;
    string lot = 2;
    string vendor_code = 3;
    string image = 4;
    string size = 5;
    uint64 count = 6;
    float weight = 7;
    string description = 8;
    uint32 status_id = 9;
    string status = 10;
}
